Fixed: Controls property dialog overflow #141 Dockerfile

--- a/client/src/app/gauges/gauge-property/flex-input/flex-input.component.css
+++ b/client/src/app/gauges/gauge-property/flex-input/flex-input.component.css
@@ -38,7 +38,7 @@
 
 .item-step {
     display: inline-block;
-    width: 320px;
+    width: 100%;
 }
 
 .item-unit {
